--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,100 @@
 .App {
-  text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
 }
 
 .App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+  background-color: #eaeaee;
+  min-height: 10vh;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
   font-size: calc(10px + 2vmin);
-  color: white;
+  color: #120202;
 }
 
-.App-link {
-  color: #61dafb;
+.App-cases {
+  display: flex;
+  justify-content: space-between;
+  text-align: left;
+  padding: 0;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.maps {
+  height: 40rem;
+  padding: 1rem 2rem;
+}
+
+.mine {
+  display: flex;
+  flex-direction: column;
+  flex: 100%;
+  background: rgb(205, 205, 205);
+  background: linear-gradient(0deg, rgba(205, 205, 205, 1) 0%, rgba(243, 243, 243, 1) 24%, rgba(255, 255, 255, 1) 49%);
+}
+
+.topTen {
+  display: flex;
+  flex-direction: row;
+  flex: max-content;
+  justify-content: space-around;
+}
+
+select {
+  font-size: 16px;
+  border: 1px solid white;
+  -moz-text-align-last: center;
+  text-rendering: optimizeSpeed;
+  cursor: pointer;
+  text-align-last: left;
+}
+
+select:hover {
+  border-bottom: 1px solid darkred;
+}
+
+select:focus {
+  outline-color: white;
+}
+
+.input__select {
+  color: hsl(340, 90%, 4%);
+  text-align: start;
+  font-size: 18px;
+  font-weight: bold;
+  padding-right: 1rem;
+}
+
+option {
+  text-align: right;
+}
+
+.country {
+  display: flex;
+  flex-direction: row;
+  flex: max-content;
+  justify-content: space-around;
+  margin-bottom: 2rem;
+}
+
+.dataText {
+  padding-top: 1rem;
+}
+
+.graphs {
+  display: flex;
+  flex-direction: column;
+  padding-top: 1rem;
+}
+
+.barChart {
+  padding: 1rem;
+}
+
+.rv-xy-plot__axis__tick__text {
+  fill: #6b6b76;
+  font-size: 14px;
+  padding: 2rem;
 }
